# tno-compiler

./: .gitignore  CLAUDE.md  SPEC.md  pyproject.toml
data/: deep_compression.csv  deep_n6.csv  lr_depth_sensitivity.csv  lr_sensitivity.csv  tfi_benchmark.csv  tfi_log.txt
data/notebook/: circ_qasm2_qiskit_steps10.qasm  circ_qasm2_qiskit_steps20.qasm  circ_qasm2_qiskit_steps30.qasm  circ_qasm2_qiskit_steps40.qasm  circ_qasm2_qiskit_steps5.qasm  circ_qasm2_qiskit_steps60.qasm
docs/: candidate_generation.md
docs/data/: compression_grid.csv  compression_grid2.csv  drop_rate_sweep.csv  ensemble_vs_single.csv  exp1.json  overtight_perturb.csv  perturbation_benefit.csv  worst_vs_avg.csv
docs/plots/: README.md
reference_sources/: INDEX.md  README.md  campbell_2017_no_public_tex_source.txt
reference_sources/raw/: chen_2019_arxiv1912.02780.src  ferris_2015_arxiv1507.00767.src  gibbs_cincio_2025_arxiv2409.16361.src  hastings_2017_arxiv1612.01011.src
scripts/: analyze_tfi_data.py  benchmark_ensemble.py  check_quimb_inds.py  compare_frobenius.py  compare_rqcopt.py  compile_notebook_batched_segments.py  compile_notebook_parallel_segments.py  compression_scaling.py  compression_sweep.py  compression_sweep2.py  compression_sweep_n12.py  debug_4q_bonds.py  debug_factor.py  debug_first_principles.py  debug_index_mapping.py  debug_mpo_from_dense.py  debug_mpo_gate.py  debug_multigate_merge.py  deep_compression.py  deep_n6.py  drop_rate_sweep.py  explore_quimb_api.py  explore_quimb_circuit_mpo.py  generate_tfi_data.py  gpu_perf_compare.py  gpu_perf_sweep.py  lr_deep.py  lr_depth_sensitivity.py  lr_sensitivity.py  make_plots.py  max_width.py  optimal_depth_vs_tol.py  profile_depth.py  profile_einsum_opt.py  profile_pipeline.py  scale_up.py  scaling_n.py  single_n6.py  test_1layer.py  test_1layer_envs.py  (+21 more)
src/tno_compiler/: brickwall.py  compile_state.py  compiler.py  compress.py  ensemble.py  gradient.py  hierarchical.py  jax_ops.py  mpo_ops.py  tfi.py  (+3 more)
tests/: conftest.py  test_brickwall.py  test_compile_circuit_optimal.py  test_compile_ensemble_optimal.py  test_compile_state.py  test_compile_state_general_initial.py  test_compile_state_optimal.py  test_compiler.py  test_conversion.py  test_diamond.py  test_ensemble.py  test_gradient.py  test_jax_ops_batched.py  test_mpo_tolerance.py  test_optimize_layer_batched.py  test_pipeline.py  test_polar_sweep_batched.py
(+21 files in other folders)
