[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tno-compiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bqskit>=1.2.1",
    "jax>=0.4.20",
    "scipy>=1.11",
]

[project.optional-dependencies]
cpu = ["jax[cpu]>=0.4.20"]
gpu = ["jax[cuda12]>=0.4.20"]
aqc = ["qiskit-addon-aqc-tensor", "quimb"]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "qiskit>=1.0",
    "cvxpy>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
