[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tno-compiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bqskit>=1.2.1",
    "jax>=0.4.20",
    "scipy>=1.11",
]

[project.optional-dependencies]
cpu = ["jax[cpu]>=0.4.20"]
# Pin gpu trio to the same minor so jax-cuda12-plugin matches jaxlib.
# Plugin 0.10.0 against jaxlib 0.9.x silently disables the GPU backend.
gpu = [
    "jax[cuda12]>=0.10",
    "jaxlib>=0.10",
    "jax-cuda12-plugin>=0.10",
]
aqc = ["qiskit-addon-aqc-tensor", "quimb", "qiskit-quimb"]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "qiskit>=1.0",
    "cvxpy>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
