[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tno-compiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bqskit>=1.2.1",
    # Base jax pinned to the same minor as the gpu extra so adding
    # `--extra gpu` doesn't trigger a resolver conflict.
    "jax>=0.10",
    "scipy>=1.11",
    "qiskit>=1.0",
    "quimb",
    "qiskit-quimb",
    "qiskit-addon-aqc-tensor",
    "cvxpy>=1.4",
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.optional-dependencies]
# Cuda stack only — `uv sync --extra gpu`. Pin jax + jaxlib + cuda
# plugin to the same minor; a 0.10 plugin against 0.9 jaxlib silently
# disables the GPU backend.
gpu = [
    "jax[cuda12]>=0.10",
    "jaxlib>=0.10",
    "jax-cuda12-plugin>=0.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
